--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/myalenti/calendar_harvest.git"
+    "url": "git+https://github.com/myalenti/calHarvest.git"
   },
   "author": "Mark Yalenti",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/myalenti/calendar_harvest/issues"
+    "url": "https://github.com/myalenti/calHarvest/issues"
   },
-  "homepage": "https://github.com/myalenti/calendar_harvest#readme",
+  "homepage": "https://github.com/myalenti/calHarvest#readme",
   "dependencies": {
     "google-auth-library": "^0.12.0",
     "googleapis": "^23.0.0",
